cncProd/force-app/main/default/objects/Inventory_Vehicle__c/Inventory_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Inventory Vehicle</label>
    <nameField>
        <label>Inventory Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>