cncProd/force-app/main/default/objects/Inventory_Vehicle__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color Master</label>
    <referenceTo>Color_Master__c</referenceTo>
    <relationshipLabel>Inventory Vehicles</relationshipLabel>
    <relationshipName>Inventory_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>