cncProd/force-app/main/default/objects/Inventory_Vehicle__c/fields/DWH_Inv_Vehicle_Id__c.field-meta.xml
<CustomField>
    <fullName>DWH_Inv_Vehicle_Id__c</fullName>
    <externalId>true</externalId>
    <label>DWH Inv Vehicle Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>