cncProd/force-app/main/default/objects/Inventory_Vehicle__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <label>Model Year</label>
    <type>Date</type>
</CustomField>