cncProd/force-app/main/default/objects/Inventory_Vehicle__c/fields/Secure_Number__c.field-meta.xml
<CustomField>
    <fullName>Secure_Number__c</fullName>
    <label>Secure Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>