cncProd/force-app/main/default/objects/Inventory_Vehicle__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <referenceTo>Variant__c</referenceTo>
    <relationshipLabel>Inventory Vehicles</relationshipLabel>
    <relationshipName>Inventory_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>